@@ -21,6 +21,7 @@ import static android.net.DnsResolver.TYPE_AAAA;
 
 import static com.android.dx.mockito.inline.extended.ExtendedMockito.mockitoSession;
 
+import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 import static org.mockito.Mockito.any;
@@ -38,8 +39,11 @@ import static java.util.stream.Collectors.toList;
 import android.content.Context;
 import android.content.Intent;
 import android.content.SharedPreferences;
+import android.net.ConnectivityManager;
 import android.net.DnsResolver;
 import android.net.InetAddresses;
+import android.net.LinkAddress;
+import android.net.LinkProperties;
 import android.net.Network;
 import android.net.ipsec.ike.exceptions.IkeIOException;
 import android.net.ipsec.ike.exceptions.IkeNetworkLostException;
@@ -51,7 +55,6 @@ import android.telephony.CellIdentityGsm;
 import android.telephony.CellIdentityLte;
 import android.telephony.CellIdentityNr;
 import android.telephony.CellIdentityWcdma;
-import android.telephony.CellInfo;
 import android.telephony.CellInfoGsm;
 import android.telephony.CellInfoLte;
 import android.telephony.CellInfoNr;
@@ -62,6 +65,8 @@ import android.telephony.SubscriptionManager;
 import android.telephony.TelephonyManager;
 import android.telephony.data.ApnSetting;
 import android.util.Log;
+
+import libcore.net.InetAddressUtils;
 
 import com.google.android.iwlan.ErrorPolicyManager;
 import com.google.android.iwlan.IwlanCarrierConfig;
@@ -83,9 +88,9 @@ import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.Executor;
 import java.util.concurrent.RejectedExecutionException;
@@ -106,21 +111,27 @@ public class EpdgSelectorTest {
         0x38, 0x01, 0x24, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
         0x00, 0x00, 0x00, 0x01
     };
-    private static final String TEST_IP_ADDRESS = "127.0.0.1";
-    private static final String TEST_IP_ADDRESS_1 = "127.0.0.2";
-    private static final String TEST_IP_ADDRESS_2 = "127.0.0.3";
-    private static final String TEST_IP_ADDRESS_3 = "127.0.0.4";
-    private static final String TEST_IP_ADDRESS_4 = "127.0.0.5";
-    private static final String TEST_IP_ADDRESS_5 = "127.0.0.6";
-    private static final String TEST_IP_ADDRESS_6 = "127.0.0.7";
-    private static final String TEST_IP_ADDRESS_7 = "127.0.0.8";
+
+    private static final String TEST_LOCAL_IPV4_ADDRESS = "192.168.1.100";
+    private static final String TEST_LOCAL_IPV6_ADDRESS = "2001:db8::1";
+
+    private static final String TEST_IPV4_ADDRESS = "127.0.0.1";
+    private static final String TEST_IPV4_ADDRESS_1 = "127.0.0.2";
+    private static final String TEST_IPV4_ADDRESS_2 = "127.0.0.3";
+    private static final String TEST_IPV4_ADDRESS_3 = "127.0.0.4";
+    private static final String TEST_IPV4_ADDRESS_4 = "127.0.0.5";
+    private static final String TEST_IPV4_ADDRESS_5 = "127.0.0.6";
+    private static final String TEST_IPV4_ADDRESS_6 = "127.0.0.7";
+    private static final String TEST_IPV4_ADDRESS_7 = "127.0.0.8";
     private static final String TEST_IPV6_ADDRESS = "0000:0000:0000:0000:0000:0000:0000:0001";
 
     private static final int TEST_PCO_ID_INVALID = 0xFF00;
     private static final int TEST_PCO_ID_IPV6 = 0xFF01;
     private static final int TEST_PCO_ID_IPV4 = 0xFF02;
 
-    private final List<String> ehplmnList = new ArrayList<String>();
+    private final List<String> ehplmnList = new ArrayList<>();
+
+    private final LinkProperties mTestLinkProperties = new LinkProperties();
 
     @Mock private Context mMockContext;
     @Mock private Network mMockNetwork;
@@ -128,15 +139,8 @@ public class EpdgSelectorTest {
     @Mock private SubscriptionManager mMockSubscriptionManager;
     @Mock private SubscriptionInfo mMockSubscriptionInfo;
     @Mock private TelephonyManager mMockTelephonyManager;
+    @Mock private ConnectivityManager mMockConnectivityManager;
     @Mock private SharedPreferences mMockSharedPreferences;
-    @Mock private CellInfoGsm mMockCellInfoGsm;
-    @Mock private CellIdentityGsm mMockCellIdentityGsm;
-    @Mock private CellInfoWcdma mMockCellInfoWcdma;
-    @Mock private CellIdentityWcdma mMockCellIdentityWcdma;
-    @Mock private CellInfoLte mMockCellInfoLte;
-    @Mock private CellIdentityLte mMockCellIdentityLte;
-    @Mock private CellInfoNr mMockCellInfoNr;
-    @Mock private CellIdentityNr mMockCellIdentityNr;
     @Mock private DnsResolver mMockDnsResolver;
     @Mock private FeatureFlags mfakeFeatureFlags;
 
@@ -152,12 +156,18 @@ public class EpdgSelectorTest {
                         .mockStatic(ErrorPolicyManager.class)
                         .startMocking();
 
-        when(ErrorPolicyManager.getInstance(mMockContext, DEFAULT_SLOT_INDEX))
-                .thenReturn(mMockErrorPolicyManager);
-        mEpdgSelector = spy(new EpdgSelector(mMockContext, DEFAULT_SLOT_INDEX, mfakeFeatureFlags));
-
+        // Stub the external instances before initializing EpdgSelector,
+        // as these objects will be used in the constructor.
         when(mMockContext.getSystemService(eq(SubscriptionManager.class)))
                 .thenReturn(mMockSubscriptionManager);
+        when(mMockContext.getSystemService(eq(TelephonyManager.class)))
+                .thenReturn(mMockTelephonyManager);
+        when(mMockContext.getSystemService(eq(ConnectivityManager.class)))
+                .thenReturn(mMockConnectivityManager);
+        when(ErrorPolicyManager.getInstance(mMockContext, DEFAULT_SLOT_INDEX))
+                .thenReturn(mMockErrorPolicyManager);
+
+        mEpdgSelector = spy(new EpdgSelector(mMockContext, DEFAULT_SLOT_INDEX, mfakeFeatureFlags));
 
         when(mMockSubscriptionManager.getActiveSubscriptionInfoForSimSlotIndex(anyInt()))
                 .thenReturn(mMockSubscriptionInfo);
@@ -167,9 +177,6 @@ public class EpdgSelectorTest {
         when(mMockSubscriptionInfo.getMncString()).thenReturn("120");
 
         when(mMockTelephonyManager.getNetworkOperator()).thenReturn("311120");
-
-        when(mMockContext.getSystemService(eq(TelephonyManager.class)))
-                .thenReturn(mMockTelephonyManager);
 
         when(mMockTelephonyManager.createForSubscriptionId(anyInt()))
                 .thenReturn(mMockTelephonyManager);
@@ -183,6 +190,11 @@ public class EpdgSelectorTest {
                 .thenReturn(mMockSharedPreferences);
 
         when(mMockSharedPreferences.getString(any(), any())).thenReturn("US");
+
+        when(mMockConnectivityManager.getLinkProperties(mMockNetwork))
+                .thenReturn(mTestLinkProperties);
+
+        applyTestAddressToNetworkForFamily(EpdgSelector.PROTO_FILTER_IPV4V6);
 
         // Mock carrier configs with test bundle
         IwlanCarrierConfig.putTestConfigInt(
@@ -200,7 +212,7 @@ public class EpdgSelectorTest {
         mFakeDns.clearAll();
     }
 
-    private List<InetAddress> getInetAddresses(String... hostnames) throws UnknownHostException {
+    private List<InetAddress> getInetAddresses(String... hostnames) {
         return Arrays.stream(hostnames)
                 .map(
                         hostname -> {
@@ -218,12 +230,10 @@ public class EpdgSelectorTest {
     @Test
     public void testStaticMethodPass() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         // Set DnsResolver query mock
         final String testStaticAddress = "epdg.epc.mnc088.mcc888.pub.3gppnetwork.org";
-        mFakeDns.setAnswer(testStaticAddress, new String[] {TEST_IP_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(testStaticAddress, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
 
         // Set carrier config mock
         IwlanCarrierConfig.putTestConfigIntArray(
@@ -232,10 +242,8 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, testStaticAddress);
 
-        List<InetAddress> expectedAddresses =
-                Arrays.asList(InetAddress.getAllByName(TEST_IP_ADDRESS));
-        List<InetAddress> actualAddresses =
-                getValidatedServerListWithDefaultParams(false /*isEmergency*/);
+        var expectedAddresses = List.of(InetAddress.getAllByName(TEST_IPV4_ADDRESS));
+        var actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
@@ -246,22 +254,20 @@ public class EpdgSelectorTest {
                 new int[] {CarrierConfigManager.Iwlan.EPDG_ADDRESS_STATIC});
         // Carrier config directly contains the ePDG IP address.
         IwlanCarrierConfig.putTestConfigString(
-                CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, TEST_IP_ADDRESS);
+                CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, TEST_IPV4_ADDRESS);
 
-        List<InetAddress> actualAddresses =
-                getValidatedServerListWithDefaultParams(false /*isEmergency*/);
-        assertEquals(InetAddresses.parseNumericAddress(TEST_IP_ADDRESS), actualAddresses.get(0));
+        var actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        assertEquals(
+                InetAddresses.parseNumericAddress(TEST_IPV4_ADDRESS), actualAddresses.getFirst());
     }
 
     @Test
     public void testRoamStaticMethodPass() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         // Set DnsResolver query mock
         final String testRoamStaticAddress = "epdg.epc.mnc088.mcc888.pub.3gppnetwork.org";
-        mFakeDns.setAnswer(testRoamStaticAddress, new String[] {TEST_IP_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(testRoamStaticAddress, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
 
         // Set carrier config mock
         IwlanCarrierConfig.putTestConfigIntArray(
@@ -271,9 +277,8 @@ public class EpdgSelectorTest {
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_ROAMING_STRING,
                 testRoamStaticAddress);
 
-        List<InetAddress> actualAddresses =
-                getValidatedServerListWithDefaultParams(false /*isEmergency*/);
-        List<InetAddress> expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS});
+        var actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        var expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
@@ -290,27 +295,21 @@ public class EpdgSelectorTest {
     @Test
     public void testPlmnResolutionMethodWithNoPlmnInCarrierConfig() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         // setUp() fills default values for mcc-mnc
         String expectedFqdnFromImsi = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
         String expectedFqdnFromEhplmn = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
 
-        mFakeDns.setAnswer(expectedFqdnFromImsi, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
-        mFakeDns.setAnswer(expectedFqdnFromEhplmn, new String[] {TEST_IP_ADDRESS_2}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdnFromImsi, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdnFromEhplmn, new String[] {TEST_IPV4_ADDRESS_2}, TYPE_A);
 
-        List<InetAddress> actualAddresses =
-                getValidatedServerListWithDefaultParams(false /*isEmergency*/);
-        List<InetAddress> expectedAddresses =
-                getInetAddresses(new String[] {TEST_IP_ADDRESS_1, TEST_IP_ADDRESS_2});
+        var actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        var expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS_1, TEST_IPV4_ADDRESS_2);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
     private void testPlmnResolutionMethod(boolean isEmergency) throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         String expectedFqdnFromImsi = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
         String expectedFqdnFromRplmn = "epdg.epc.mnc121.mcc311.pub.3gppnetwork.org";
@@ -326,44 +325,40 @@ public class EpdgSelectorTest {
                 CarrierConfigManager.Iwlan.KEY_MCC_MNCS_STRING_ARRAY,
                 new String[] {"310-480", "300-120", "311-120", "311-121"});
 
-        mFakeDns.setAnswer(expectedFqdnFromImsi, new String[] {TEST_IP_ADDRESS}, TYPE_A);
-        mFakeDns.setAnswer(expectedFqdnFromEhplmn, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
-        mFakeDns.setAnswer(excludedFqdnFromConfig, new String[] {TEST_IP_ADDRESS_2}, TYPE_A);
-        mFakeDns.setAnswer("sos." + expectedFqdnFromImsi, new String[] {TEST_IP_ADDRESS_3}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdnFromImsi, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdnFromEhplmn, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(excludedFqdnFromConfig, new String[] {TEST_IPV4_ADDRESS_2}, TYPE_A);
         mFakeDns.setAnswer(
-                "sos." + expectedFqdnFromEhplmn, new String[] {TEST_IP_ADDRESS_4}, TYPE_A);
+                "sos." + expectedFqdnFromImsi, new String[] {TEST_IPV4_ADDRESS_3}, TYPE_A);
         mFakeDns.setAnswer(
-                "sos." + excludedFqdnFromConfig, new String[] {TEST_IP_ADDRESS_5}, TYPE_A);
-        mFakeDns.setAnswer(expectedFqdnFromRplmn, new String[] {TEST_IP_ADDRESS_6}, TYPE_A);
+                "sos." + expectedFqdnFromEhplmn, new String[] {TEST_IPV4_ADDRESS_4}, TYPE_A);
         mFakeDns.setAnswer(
-                "sos." + expectedFqdnFromRplmn, new String[] {TEST_IP_ADDRESS_7}, TYPE_A);
+                "sos." + excludedFqdnFromConfig, new String[] {TEST_IPV4_ADDRESS_5}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdnFromRplmn, new String[] {TEST_IPV4_ADDRESS_6}, TYPE_A);
+        mFakeDns.setAnswer(
+                "sos." + expectedFqdnFromRplmn, new String[] {TEST_IPV4_ADDRESS_7}, TYPE_A);
 
-        List<InetAddress> actualAddresses = getValidatedServerListWithDefaultParams(isEmergency);
-
-        String[] testIpAddresses;
-        if (isEmergency) {
-            testIpAddresses =
-                    new String[] {
-                        TEST_IP_ADDRESS_7,
-                        TEST_IP_ADDRESS_6,
-                        TEST_IP_ADDRESS_3,
-                        TEST_IP_ADDRESS,
-                        TEST_IP_ADDRESS_4,
-                        TEST_IP_ADDRESS_1
-                    };
-        } else {
-            testIpAddresses = new String[] {TEST_IP_ADDRESS_6, TEST_IP_ADDRESS, TEST_IP_ADDRESS_1};
-        }
-        List<InetAddress> expectedAddresses = getInetAddresses(testIpAddresses);
-
+        var actualAddresses = getValidatedServerListWithDefaultParams(isEmergency);
+        var expectedAddresses =
+                getInetAddresses(
+                        isEmergency
+                                ? new String[] {
+                                    TEST_IPV4_ADDRESS_7,
+                                    TEST_IPV4_ADDRESS_6,
+                                    TEST_IPV4_ADDRESS_3,
+                                    TEST_IPV4_ADDRESS,
+                                    TEST_IPV4_ADDRESS_4,
+                                    TEST_IPV4_ADDRESS_1
+                                }
+                                : new String[] {
+                                    TEST_IPV4_ADDRESS_6, TEST_IPV4_ADDRESS, TEST_IPV4_ADDRESS_1
+                                });
         assertEquals(expectedAddresses, actualAddresses);
     }
 
     @Test
     public void testPlmnResolutionMethodWithDuplicatedImsiAndEhplmn() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         String fqdnFromEhplmn1 = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
         String fqdnFromEhplmn2AndImsi = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
@@ -384,14 +379,14 @@ public class EpdgSelectorTest {
                     CarrierConfigManager.Iwlan.EPDG_PLMN_EHPLMN_ALL,
                 });
 
-        mFakeDns.setAnswer(fqdnFromEhplmn1, new String[] {TEST_IP_ADDRESS}, TYPE_A);
-        mFakeDns.setAnswer(fqdnFromEhplmn2AndImsi, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
-        mFakeDns.setAnswer(fqdnFromEhplmn3, new String[] {TEST_IP_ADDRESS_2}, TYPE_A);
-        mFakeDns.setAnswer(fqdnFromEhplmn4, new String[] {TEST_IP_ADDRESS_3}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn1, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn2AndImsi, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn3, new String[] {TEST_IPV4_ADDRESS_2}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn4, new String[] {TEST_IPV4_ADDRESS_3}, TYPE_A);
 
         List<InetAddress> actualAddresses = getValidatedServerListWithDefaultParams(false);
         String[] testIpAddresses = {
-            TEST_IP_ADDRESS_1, TEST_IP_ADDRESS, TEST_IP_ADDRESS_2, TEST_IP_ADDRESS_3,
+            TEST_IPV4_ADDRESS_1, TEST_IPV4_ADDRESS, TEST_IPV4_ADDRESS_2, TEST_IPV4_ADDRESS_3,
         };
         List<InetAddress> expectedAddresses = getInetAddresses(testIpAddresses);
         assertEquals(expectedAddresses, actualAddresses);
@@ -400,8 +395,6 @@ public class EpdgSelectorTest {
     @Test
     public void testPlmnResolutionMethodWithInvalidLengthPlmns() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         when(mMockSubscriptionInfo.getMccString()).thenReturn("31");
         when(mMockSubscriptionInfo.getMncString()).thenReturn("12");
@@ -428,8 +421,6 @@ public class EpdgSelectorTest {
     @Test
     public void testPlmnResolutionMethodWithInvalidCharacterPlmns() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         when(mMockSubscriptionInfo.getMccString()).thenReturn("a b");
         when(mMockSubscriptionInfo.getMncString()).thenReturn("!@#");
@@ -457,8 +448,6 @@ public class EpdgSelectorTest {
     @Test
     public void testPlmnResolutionMethodWithEmptyPlmns() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         when(mMockSubscriptionInfo.getMccString()).thenReturn(null);
         when(mMockSubscriptionInfo.getMncString()).thenReturn(null);
@@ -484,8 +473,6 @@ public class EpdgSelectorTest {
     @Test
     public void testPlmnResolutionMethodWithFirstEhplmn() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         String fqdnFromEhplmn1 = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
         String fqdnFromEhplmn2 = "epdg.epc.mnc121.mcc300.pub.3gppnetwork.org";
@@ -503,21 +490,19 @@ public class EpdgSelectorTest {
                 CarrierConfigManager.Iwlan.KEY_EPDG_PLMN_PRIORITY_INT_ARRAY,
                 new int[] {CarrierConfigManager.Iwlan.EPDG_PLMN_EHPLMN_FIRST});
 
-        mFakeDns.setAnswer(fqdnFromEhplmn1, new String[] {TEST_IP_ADDRESS}, TYPE_A);
-        mFakeDns.setAnswer(fqdnFromEhplmn2, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
-        mFakeDns.setAnswer(fqdnFromEhplmn3, new String[] {TEST_IP_ADDRESS_2}, TYPE_A);
-        mFakeDns.setAnswer(fqdnFromEhplmn4, new String[] {TEST_IP_ADDRESS_3}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn1, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn2, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn3, new String[] {TEST_IPV4_ADDRESS_2}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn4, new String[] {TEST_IPV4_ADDRESS_3}, TYPE_A);
 
-        List<InetAddress> actualAddresses = getValidatedServerListWithDefaultParams(false);
-        List<InetAddress> expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS});
+        var actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        var expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
     @Test
     public void testPlmnResolutionMethodWithRplmn() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         String fqdnFromRplmn = "epdg.epc.mnc122.mcc300.pub.3gppnetwork.org";
         String fqdnFromEhplmn1 = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
@@ -537,20 +522,18 @@ public class EpdgSelectorTest {
                 CarrierConfigManager.Iwlan.KEY_EPDG_PLMN_PRIORITY_INT_ARRAY,
                 new int[] {CarrierConfigManager.Iwlan.EPDG_PLMN_RPLMN});
 
-        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IP_ADDRESS}, TYPE_A);
-        mFakeDns.setAnswer(fqdnFromEhplmn1, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
-        mFakeDns.setAnswer(fqdnFromEhplmn2, new String[] {TEST_IP_ADDRESS_2}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn1, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromEhplmn2, new String[] {TEST_IPV4_ADDRESS_2}, TYPE_A);
 
-        List<InetAddress> actualAddresses = getValidatedServerListWithDefaultParams(false);
-        List<InetAddress> expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS});
+        var actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        var expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
     @Test
     public void testCarrierConfigStaticAddressList() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         // Set DnsResolver query mock
         final String addr1 = "epdg.epc.mnc480.mcc310.pub.3gppnetwork.org";
@@ -558,9 +541,9 @@ public class EpdgSelectorTest {
         final String addr3 = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
         final String testStaticAddress = addr1 + "," + addr2 + "," + addr3;
 
-        mFakeDns.setAnswer(addr1, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
-        mFakeDns.setAnswer(addr2, new String[] {TEST_IP_ADDRESS_2}, TYPE_A);
-        mFakeDns.setAnswer(addr3, new String[] {TEST_IP_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(addr1, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(addr2, new String[] {TEST_IPV4_ADDRESS_2}, TYPE_A);
+        mFakeDns.setAnswer(addr3, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
 
         // Set carrier config mock
         IwlanCarrierConfig.putTestConfigIntArray(
@@ -569,11 +552,9 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, testStaticAddress);
 
-        List<InetAddress> actualAddresses =
-                getValidatedServerListWithDefaultParams(false /*isEmergency*/);
-        List<InetAddress> expectedAddresses =
-                getInetAddresses(
-                        new String[] {TEST_IP_ADDRESS_1, TEST_IP_ADDRESS_2, TEST_IP_ADDRESS});
+        var actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        var expectedAddresses =
+                getInetAddresses(TEST_IPV4_ADDRESS_1, TEST_IPV4_ADDRESS_2, TEST_IPV4_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
@@ -588,14 +569,14 @@ public class EpdgSelectorTest {
             @EpdgSelector.EpdgAddressOrder int order,
             boolean isEmergency)
             throws Exception {
-        List<InetAddress> actualAddresses = new ArrayList<InetAddress>();
+        List<InetAddress> actualAddresses = new ArrayList<>();
         final CountDownLatch latch = new CountDownLatch(1);
         IwlanError ret =
                 mEpdgSelector.getValidatedServerList(
-                        1234,
+                        /* transactionId= */ 1234,
                         filter,
                         order,
-                        false /* isRoaming */,
+                        /* isRoaming= */ false,
                         isEmergency,
                         mMockNetwork,
                         new EpdgSelector.EpdgSelectorCallback() {
@@ -629,7 +610,7 @@ public class EpdgSelectorTest {
         sendCarrierSignalPcoValue(ApnSetting.TYPE_IMS, TEST_PCO_ID_IPV6, TEST_PCO_NO_DATA);
 
         List<InetAddress> actualAddresses =
-                getValidatedServerListWithDefaultParams(false /* isEmergency */);
+                getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
 
         assertEquals(0, actualAddresses.size());
     }
@@ -642,7 +623,7 @@ public class EpdgSelectorTest {
         sendCarrierSignalPcoValue(ApnSetting.TYPE_IMS, TEST_PCO_ID_IPV6, TEST_PCO_PLMN_DATA);
 
         List<InetAddress> actualAddresses =
-                getValidatedServerListWithDefaultParams(false /* isEmergency */);
+                getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
         assertEquals(0, actualAddresses.size());
     }
 
@@ -669,60 +650,48 @@ public class EpdgSelectorTest {
     private void testCellularResolutionMethod(boolean isEmergency) throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
 
-        int testMcc = 311;
-        int testMnc = 120;
-        String testMccString = "311";
-        String testMncString = "120";
-        int testLac = 65484;
-        int testTac = 65484;
-        int testNrTac = 16764074;
-
-        List<CellInfo> fakeCellInfoArray = new ArrayList<CellInfo>();
+        var mockCellInfoGsm = mock(CellInfoGsm.class);
+        var mockCellIdentityGsm = mock(CellIdentityGsm.class);
+        var mockCellInfoWcdma = mock(CellInfoWcdma.class);
+        var mockCellIdentityWcdma = mock(CellIdentityWcdma.class);
+        var mockCellInfoLte = mock(CellInfoLte.class);
+        var mockCellIdentityLte = mock(CellIdentityLte.class);
+        var mockCellInfoNr = mock(CellInfoNr.class);
+        var mockCellIdentityNr = mock(CellIdentityNr.class);
+        var testLac = 65484;
+        var testTac = 65484;
+        var testNrTac = 16764074;
+        var fakeCellInfoArray =
+                List.of(mockCellInfoGsm, mockCellInfoWcdma, mockCellInfoLte, mockCellInfoNr);
 
         IwlanCarrierConfig.putTestConfigIntArray(
                 CarrierConfigManager.Iwlan.KEY_EPDG_ADDRESS_PRIORITY_INT_ARRAY,
                 new int[] {CarrierConfigManager.Iwlan.EPDG_ADDRESS_CELLULAR_LOC});
 
         // Set cell info mock
-        fakeCellInfoArray.add(mMockCellInfoGsm);
-        when(mMockCellInfoGsm.isRegistered()).thenReturn(true);
-        when(mMockCellInfoGsm.getCellIdentity()).thenReturn(mMockCellIdentityGsm);
-        when(mMockCellIdentityGsm.getMcc()).thenReturn(testMcc);
-        when(mMockCellIdentityGsm.getMnc()).thenReturn(testMnc);
-        when(mMockCellIdentityGsm.getLac()).thenReturn(testLac);
+        when(mockCellInfoGsm.isRegistered()).thenReturn(true);
+        when(mockCellInfoGsm.getCellIdentity()).thenReturn(mockCellIdentityGsm);
+        when(mockCellIdentityGsm.getLac()).thenReturn(testLac);
 
-        fakeCellInfoArray.add(mMockCellInfoWcdma);
-        when(mMockCellInfoWcdma.isRegistered()).thenReturn(true);
-        when(mMockCellInfoWcdma.getCellIdentity()).thenReturn(mMockCellIdentityWcdma);
-        when(mMockCellIdentityWcdma.getMcc()).thenReturn(testMcc);
-        when(mMockCellIdentityWcdma.getMnc()).thenReturn(testMnc);
-        when(mMockCellIdentityWcdma.getLac()).thenReturn(testLac);
+        when(mockCellInfoWcdma.isRegistered()).thenReturn(true);
+        when(mockCellInfoWcdma.getCellIdentity()).thenReturn(mockCellIdentityWcdma);
+        when(mockCellIdentityWcdma.getLac()).thenReturn(testLac);
 
-        fakeCellInfoArray.add(mMockCellInfoLte);
-        when(mMockCellInfoLte.isRegistered()).thenReturn(true);
-        when(mMockCellInfoLte.getCellIdentity()).thenReturn(mMockCellIdentityLte);
-        when(mMockCellIdentityLte.getMcc()).thenReturn(testMcc);
-        when(mMockCellIdentityLte.getMnc()).thenReturn(testMnc);
-        when(mMockCellIdentityLte.getTac()).thenReturn(testTac);
+        when(mockCellInfoLte.isRegistered()).thenReturn(true);
+        when(mockCellInfoLte.getCellIdentity()).thenReturn(mockCellIdentityLte);
+        when(mockCellIdentityLte.getTac()).thenReturn(testTac);
 
-        fakeCellInfoArray.add(mMockCellInfoNr);
-        when(mMockCellInfoNr.isRegistered()).thenReturn(true);
-        when(mMockCellInfoNr.getCellIdentity()).thenReturn(mMockCellIdentityNr);
-        when(mMockCellIdentityNr.getMccString()).thenReturn(testMccString);
-        when(mMockCellIdentityNr.getMncString()).thenReturn(testMncString);
-        when(mMockCellIdentityNr.getTac()).thenReturn(testNrTac);
+        when(mockCellInfoNr.isRegistered()).thenReturn(true);
+        when(mockCellInfoNr.getCellIdentity()).thenReturn(mockCellIdentityNr);
+        when(mockCellIdentityNr.getTac()).thenReturn(testNrTac);
 
         when(mMockTelephonyManager.getAllCellInfo()).thenReturn(fakeCellInfoArray);
 
         setAnswerForCellularMethod(isEmergency, 311, 120);
         setAnswerForCellularMethod(isEmergency, 300, 120);
-
-        List<InetAddress> actualAddresses = getValidatedServerListWithDefaultParams(isEmergency);
-
-        List<InetAddress> expectedAddresses =
-                getInetAddresses(
-                        new String[] {TEST_IP_ADDRESS, TEST_IP_ADDRESS_1, TEST_IP_ADDRESS_2});
-
+        var actualAddresses = getValidatedServerListWithDefaultParams(isEmergency);
+        var expectedAddresses =
+                getInetAddresses(TEST_IPV4_ADDRESS, TEST_IPV4_ADDRESS_1, TEST_IPV4_ADDRESS_2);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
@@ -730,8 +699,6 @@ public class EpdgSelectorTest {
     public void testTemporaryExcludedIpAddressWhenDisabledExcludeFailedIp() throws Exception {
         doReturn(false).when(mfakeFeatureFlags).epdgSelectionExcludeFailedIpAddress();
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         final IkeIOException mockIkeIOException = mock(IkeIOException.class);
 
@@ -755,18 +722,17 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, staticAddr);
 
-        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IP_ADDRESS}, TYPE_A);
-        mFakeDns.setAnswer(staticAddr, new String[] {TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(
+                staticAddr, new String[] {TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS}, TYPE_A);
 
-        List<InetAddress> expectedAddresses =
-                getInetAddresses(
-                        new String[] {TEST_IP_ADDRESS, TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS});
-
-        List<InetAddress> actualAddresses = getValidatedServerListWithDefaultParams(false);
+        var expectedAddresses =
+                getInetAddresses(TEST_IPV4_ADDRESS, TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS);
+        var actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
         assertEquals(expectedAddresses, actualAddresses);
 
         mEpdgSelector.onEpdgConnectionFailed(
-                InetAddress.parseNumericAddress(TEST_IP_ADDRESS), mockIkeIOException);
+                InetAddressUtils.parseNumericAddress(TEST_IPV4_ADDRESS), mockIkeIOException);
         // Flag disabled should not affect the result
         assertEquals(expectedAddresses, actualAddresses);
 
@@ -779,8 +745,6 @@ public class EpdgSelectorTest {
     public void testTemporaryExcludedIpAddressWhenEnabledExcludeFailedIp() throws Exception {
         doReturn(true).when(mfakeFeatureFlags).epdgSelectionExcludeFailedIpAddress();
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         final String fqdnFromRplmn = "epdg.epc.mnc122.mcc300.pub.3gppnetwork.org";
         final String staticAddr = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
@@ -805,80 +769,77 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, staticAddr);
 
-        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IP_ADDRESS}, TYPE_A);
-        mFakeDns.setAnswer(staticAddr, new String[] {TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(
+                staticAddr, new String[] {TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS}, TYPE_A);
 
-        List<InetAddress> actualAddresses = getValidatedServerListWithDefaultParams(false);
-        List<InetAddress> expectedAddresses =
-                getInetAddresses(
-                        new String[] {TEST_IP_ADDRESS, TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS});
+        var actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        var expectedAddresses =
+                getInetAddresses(TEST_IPV4_ADDRESS, TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
 
         mEpdgSelector.onEpdgConnectionFailed(
-                InetAddress.parseNumericAddress(TEST_IP_ADDRESS), mockIkeIOException);
-        actualAddresses = getValidatedServerListWithDefaultParams(false);
-        expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS});
+                InetAddressUtils.parseNumericAddress(TEST_IPV4_ADDRESS), mockIkeIOException);
+        actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
 
         mEpdgSelector.onEpdgConnectionFailed(
-                InetAddress.getByName(TEST_IP_ADDRESS_1), mockIkeProtocolException);
-        actualAddresses = getValidatedServerListWithDefaultParams(false);
-        assertEquals(
+                InetAddress.getByName(TEST_IPV4_ADDRESS_1), mockIkeProtocolException);
+        actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        assertArrayEquals(
                 List.of(InetAddress.getByName(TEST_IPV6_ADDRESS)).toArray(),
                 actualAddresses.toArray());
 
         // Reset temporary excluded ip addresses
         mEpdgSelector.onEpdgConnectedSuccessfully();
-        actualAddresses = getValidatedServerListWithDefaultParams(false);
+        actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
         expectedAddresses =
-                getInetAddresses(
-                        new String[] {TEST_IP_ADDRESS, TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS});
+                getInetAddresses(TEST_IPV4_ADDRESS, TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
 
         mEpdgSelector.onEpdgConnectionFailed(
-                InetAddress.parseNumericAddress(TEST_IP_ADDRESS), mockIkeProtocolException);
-        actualAddresses = getValidatedServerListWithDefaultParams(false);
-        expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS});
+                InetAddressUtils.parseNumericAddress(TEST_IPV4_ADDRESS), mockIkeProtocolException);
+        actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
 
         mEpdgSelector.onEpdgConnectionFailed(
                 InetAddress.getByName(TEST_IPV6_ADDRESS), mockIkeIOException);
-        actualAddresses = getValidatedServerListWithDefaultParams(false);
-        expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS_1});
+        actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS_1);
         assertEquals(expectedAddresses, actualAddresses);
 
         mEpdgSelector.onEpdgConnectionFailed(
-                InetAddress.getByName(TEST_IP_ADDRESS_1), mockIkeIOException);
+                InetAddress.getByName(TEST_IPV4_ADDRESS_1), mockIkeIOException);
         // All ip addresses removed, should reset excluded address
-        actualAddresses = getValidatedServerListWithDefaultParams(false);
+        actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
         expectedAddresses =
-                getInetAddresses(
-                        new String[] {TEST_IP_ADDRESS, TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS});
+                getInetAddresses(TEST_IPV4_ADDRESS, TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
 
         mEpdgSelector.onEpdgConnectionFailed(
-                InetAddress.getByName(TEST_IP_ADDRESS_1), mockIkeIOException);
-        actualAddresses = getValidatedServerListWithDefaultParams(false);
-        expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS, TEST_IPV6_ADDRESS});
+                InetAddress.getByName(TEST_IPV4_ADDRESS_1), mockIkeIOException);
+        actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS, TEST_IPV6_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
 
         // When the original result changed
-        mFakeDns.setAnswer(staticAddr, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
-        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IP_ADDRESS_3}, TYPE_A);
-        actualAddresses = getValidatedServerListWithDefaultParams(false);
-        expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS_3});
+        mFakeDns.setAnswer(staticAddr, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IPV4_ADDRESS_3}, TYPE_A);
+        actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS_3);
         assertEquals(expectedAddresses, actualAddresses);
 
         mEpdgSelector.onEpdgConnectionFailed(
-                InetAddress.getByName(TEST_IP_ADDRESS_3), mockIkeIOException);
+                InetAddress.getByName(TEST_IPV4_ADDRESS_3), mockIkeIOException);
         // It should also reset the excluded list once all ip addresses are excluded
-        actualAddresses = getValidatedServerListWithDefaultParams(false);
-        expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS_3, TEST_IP_ADDRESS_1});
+        actualAddresses = getValidatedServerListWithDefaultParams(/* isEmergency= */ false);
+        expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS_3, TEST_IPV4_ADDRESS_1);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
-    private void setAnswerForCellularMethod(boolean isEmergency, int mcc, int mnc)
-            throws Exception {
+    private void setAnswerForCellularMethod(boolean isEmergency, int mcc, int mnc) {
         String expectedFqdn1 =
                 (isEmergency)
                         ? "lacffcc.sos.epdg.epc.mnc" + mnc + ".mcc" + mcc + ".pub.3gppnetwork.org"
@@ -908,17 +869,15 @@ public class EpdgSelectorTest {
                                 + mcc
                                 + ".pub.3gppnetwork.org";
 
-        mFakeDns.setAnswer(expectedFqdn1, new String[] {TEST_IP_ADDRESS}, TYPE_A);
-        mFakeDns.setAnswer(expectedFqdn2, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
-        mFakeDns.setAnswer(expectedFqdn3, new String[] {TEST_IP_ADDRESS_2}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdn1, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdn2, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdn3, new String[] {TEST_IPV4_ADDRESS_2}, TYPE_A);
     }
 
     @Test
     public void testShouldNotTemporaryExcludedIpAddressWhenInternalError() throws Exception {
         doReturn(true).when(mfakeFeatureFlags).epdgSelectionExcludeFailedIpAddress();
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         final String fqdnFromRplmn = "epdg.epc.mnc122.mcc300.pub.3gppnetwork.org";
         final String staticAddr = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
@@ -943,18 +902,18 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, staticAddr);
 
-        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IP_ADDRESS}, TYPE_A);
-        mFakeDns.setAnswer(staticAddr, new String[] {TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(fqdnFromRplmn, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
+        mFakeDns.setAnswer(
+                staticAddr, new String[] {TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS}, TYPE_A);
 
-        List<InetAddress> expectedAddresses =
-                getInetAddresses(
-                        new String[] {TEST_IP_ADDRESS, TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS});
-
-        List<InetAddress> actualAddresses = getValidatedServerListWithDefaultParams(false);
+        var expectedAddresses =
+                getInetAddresses(TEST_IPV4_ADDRESS, TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS);
+        var actualAddresses = getValidatedServerListWithDefaultParams(false);
         assertEquals(expectedAddresses, actualAddresses);
 
         mEpdgSelector.onEpdgConnectionFailed(
-                InetAddress.parseNumericAddress(TEST_IP_ADDRESS), mockIkeNetworkLostException);
+                InetAddressUtils.parseNumericAddress(TEST_IPV4_ADDRESS),
+                mockIkeNetworkLostException);
         actualAddresses = getValidatedServerListWithDefaultParams(false);
         assertEquals(expectedAddresses, actualAddresses);
     }
@@ -962,14 +921,12 @@ public class EpdgSelectorTest {
     @Test
     public void testGetValidatedServerListIpv4Preferred() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         final String addr1 = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
         final String addr2 = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
         final String testStaticAddress = addr1 + "," + addr2;
 
-        mFakeDns.setAnswer(addr1, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(addr1, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
         mFakeDns.setAnswer(addr2, new String[] {TEST_IPV6_ADDRESS}, TYPE_AAAA);
 
         // Set carrier config mock
@@ -979,27 +936,24 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, testStaticAddress);
 
-        List<InetAddress> actualAddresses =
+        var actualAddresses =
                 getValidatedServerListWithIpPreference(
                         EpdgSelector.PROTO_FILTER_IPV4V6,
                         EpdgSelector.IPV4_PREFERRED,
-                        false /*isEmergency*/);
-        List<InetAddress> expectedAddresses =
-                getInetAddresses(new String[] {TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS});
+                        /* isEmergency= */ false);
+        var expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
     @Test
     public void testGetValidatedServerListIpv6Preferred() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         final String addr1 = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
         final String addr2 = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
         final String testStaticAddress = addr1 + "," + addr2;
 
-        mFakeDns.setAnswer(addr1, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(addr1, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
         mFakeDns.setAnswer(addr2, new String[] {TEST_IPV6_ADDRESS}, TYPE_AAAA);
 
         // Set carrier config mock
@@ -1009,27 +963,24 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, testStaticAddress);
 
-        List<InetAddress> actualAddresses =
+        var actualAddresses =
                 getValidatedServerListWithIpPreference(
                         EpdgSelector.PROTO_FILTER_IPV4V6,
                         EpdgSelector.IPV6_PREFERRED,
-                        false /*isEmergency*/);
-        List<InetAddress> expectedAddresses =
-                getInetAddresses(new String[] {TEST_IPV6_ADDRESS, TEST_IP_ADDRESS_1});
+                        /* isEmergency= */ false);
+        var expectedAddresses = getInetAddresses(TEST_IPV6_ADDRESS, TEST_IPV4_ADDRESS_1);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
     @Test
     public void testGetValidatedServerListIpv4Only() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         final String addr1 = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
         final String addr2 = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
         final String testStaticAddress = addr1 + "," + addr2;
 
-        mFakeDns.setAnswer(addr1, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(addr1, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
         mFakeDns.setAnswer(addr2, new String[] {TEST_IPV6_ADDRESS}, TYPE_AAAA);
 
         // Set carrier config mock
@@ -1039,20 +990,18 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, testStaticAddress);
 
-        List<InetAddress> expectedAddresses = getInetAddresses(new String[] {TEST_IP_ADDRESS_1});
-        List<InetAddress> actualAddresses =
+        var expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS_1);
+        var actualAddresses =
                 getValidatedServerListWithIpPreference(
                         EpdgSelector.PROTO_FILTER_IPV4,
                         EpdgSelector.SYSTEM_PREFERRED,
-                        false /*isEmergency*/);
+                        /* isEmergency= */ false);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
     @Test
     public void testGetValidatedServerListIpv4OnlyCongestion() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         when(mMockErrorPolicyManager.getMostRecentDataFailCause())
                 .thenReturn(DataFailCause.IWLAN_CONGESTION);
@@ -1070,30 +1019,27 @@ public class EpdgSelectorTest {
                 new String[] {"310-480", "300-120", "311-120"});
 
         mFakeDns.setAnswer(expectedFqdnFromHplmn, new String[] {TEST_IPV6_ADDRESS}, TYPE_AAAA);
-        mFakeDns.setAnswer(expectedFqdnFromEHplmn, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
-        mFakeDns.setAnswer(expectedFqdnFromConfig, new String[] {TEST_IP_ADDRESS_2}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdnFromEHplmn, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(expectedFqdnFromConfig, new String[] {TEST_IPV4_ADDRESS_2}, TYPE_A);
 
-        List<InetAddress> expectedAddresses =
-                Arrays.asList(InetAddress.getAllByName(TEST_IP_ADDRESS_1));
-        List<InetAddress> actualAddresses =
+        var expectedAddresses = List.of(InetAddress.getAllByName(TEST_IPV4_ADDRESS_1));
+        var actualAddresses =
                 getValidatedServerListWithIpPreference(
                         EpdgSelector.PROTO_FILTER_IPV4,
                         EpdgSelector.SYSTEM_PREFERRED,
-                        false /*isEmergency*/);
+                        /* isEmergency= */ false);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
     @Test
     public void testGetValidatedServerListIpv6Only() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         final String addr1 = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
         final String addr2 = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
         final String testStaticAddress = addr1 + "," + addr2;
 
-        mFakeDns.setAnswer(addr1, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(addr1, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
         mFakeDns.setAnswer(addr2, new String[] {TEST_IPV6_ADDRESS}, TYPE_AAAA);
 
         // Set carrier config mock
@@ -1103,30 +1049,27 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, testStaticAddress);
 
-        List<InetAddress> expectedAddresses =
-                Arrays.asList(InetAddress.getAllByName(TEST_IPV6_ADDRESS));
-        List<InetAddress> actualAddresses =
+        var expectedAddresses = List.of(InetAddress.getAllByName(TEST_IPV6_ADDRESS));
+        var actualAddresses =
                 getValidatedServerListWithIpPreference(
                         EpdgSelector.PROTO_FILTER_IPV6,
                         EpdgSelector.SYSTEM_PREFERRED,
-                        false /*isEmergency*/);
+                        /* isEmergency= */ false);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
     @Test
     public void testGetValidatedServerListSystemPreferred() throws Exception {
         when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
-        doReturn(true).when(mEpdgSelector).hasIpv4Address(mMockNetwork);
-        doReturn(true).when(mEpdgSelector).hasIpv6Address(mMockNetwork);
 
         final String addr1 = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
         final String addr2 = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
         final String addr3 = "epdg.epc.mnc120.mcc312.pub.3gppnetwork.org";
         final String testStaticAddress = addr1 + "," + addr2 + "," + addr3;
 
-        mFakeDns.setAnswer(addr1, new String[] {TEST_IP_ADDRESS_1}, TYPE_A);
+        mFakeDns.setAnswer(addr1, new String[] {TEST_IPV4_ADDRESS_1}, TYPE_A);
         mFakeDns.setAnswer(addr2, new String[] {TEST_IPV6_ADDRESS}, TYPE_AAAA);
-        mFakeDns.setAnswer(addr3, new String[] {TEST_IP_ADDRESS_2}, TYPE_A);
+        mFakeDns.setAnswer(addr3, new String[] {TEST_IPV4_ADDRESS_2}, TYPE_A);
 
         // Set carrier config mock
         IwlanCarrierConfig.putTestConfigIntArray(
@@ -1135,14 +1078,13 @@ public class EpdgSelectorTest {
         IwlanCarrierConfig.putTestConfigString(
                 CarrierConfigManager.Iwlan.KEY_EPDG_STATIC_ADDRESS_STRING, testStaticAddress);
 
-        List<InetAddress> actualAddresses =
+        var actualAddresses =
                 getValidatedServerListWithIpPreference(
                         EpdgSelector.PROTO_FILTER_IPV4V6,
                         EpdgSelector.SYSTEM_PREFERRED,
-                        false /*isEmergency*/);
-        List<InetAddress> expectedAddresses =
-                getInetAddresses(
-                        new String[] {TEST_IP_ADDRESS_1, TEST_IPV6_ADDRESS, TEST_IP_ADDRESS_2});
+                        /* isEmergency= */ false);
+        var expectedAddresses =
+                getInetAddresses(TEST_IPV4_ADDRESS_1, TEST_IPV6_ADDRESS, TEST_IPV4_ADDRESS_2);
         assertEquals(expectedAddresses, actualAddresses);
     }
 
@@ -1154,7 +1096,7 @@ public class EpdgSelectorTest {
      */
     class FakeDns {
         /** Data class to record the Dns entry. */
-        class DnsEntry {
+        static class DnsEntry {
             final String mHostname;
             final int mType;
             final List<InetAddress> mAddresses;
@@ -1189,8 +1131,7 @@ public class EpdgSelectorTest {
         }
 
         /** Sets the answer for a given name and type. */
-        private synchronized void setAnswer(String hostname, String[] answer, int type)
-                throws UnknownHostException {
+        private synchronized void setAnswer(String hostname, String[] answer, int type) {
             DnsEntry record = new DnsEntry(hostname, type, generateAnswer(answer));
             // Remove the existing one.
             mAnswers.removeIf(entry -> entry.matches(hostname, type));
@@ -1200,9 +1141,7 @@ public class EpdgSelectorTest {
 
         private List<InetAddress> generateAnswer(String[] answer) {
             if (answer == null) return new ArrayList<>();
-            return Arrays.stream(answer)
-                    .map(addr -> InetAddresses.parseNumericAddress(addr))
-                    .collect(toList());
+            return Arrays.stream(answer).map(InetAddresses::parseNumericAddress).collect(toList());
         }
 
         // Regardless of the type, depends on what the responses contained in the network.
@@ -1224,42 +1163,34 @@ public class EpdgSelectorTest {
         }
 
         /** Starts mocking DNS queries. */
-        private void startMocking() throws UnknownHostException {
+        private void startMocking() {
             // 5-arg DnsResolver.query()
             doAnswer(
-                            invocation -> {
-                                return mockQuery(
-                                        invocation,
-                                        1 /* posHostname */,
-                                        -1 /* posType */,
-                                        3 /* posExecutor */,
-                                        5 /* posCallback */);
-                            })
+                            invocation ->
+                                    mockQuery(
+                                            invocation,
+                                            /* posType= */ -1,
+                                            /* posExecutor= */ 3,
+                                            /* posCallback= */ 5))
                     .when(mMockDnsResolver)
                     .query(any(), anyString(), anyInt(), any(), any(), any());
 
             // 6-arg DnsResolver.query() with explicit query type (IPv4 or v6).
             doAnswer(
-                            invocation -> {
-                                return mockQuery(
-                                        invocation,
-                                        1 /* posHostname */,
-                                        2 /* posType */,
-                                        4 /* posExecutor */,
-                                        6 /* posCallback */);
-                            })
+                            invocation ->
+                                    mockQuery(
+                                            invocation,
+                                            /* posType= */ 2,
+                                            /* posExecutor= */ 4,
+                                            /* posCallback= */ 6))
                     .when(mMockDnsResolver)
                     .query(any(), anyString(), anyInt(), anyInt(), any(), any(), any());
         }
 
         // Mocking queries on DnsResolver#query.
-        private Answer mockQuery(
-                InvocationOnMock invocation,
-                int posHostname,
-                int posType,
-                int posExecutor,
-                int posCallback) {
-            String hostname = invocation.getArgument(posHostname);
+        private Answer<?> mockQuery(
+                InvocationOnMock invocation, int posType, int posExecutor, int posCallback) {
+            String hostname = invocation.getArgument(1);
             Executor executor = invocation.getArgument(posExecutor);
             DnsResolver.Callback<List<InetAddress>> callback = invocation.getArgument(posCallback);
             List<InetAddress> answer =
@@ -1269,12 +1200,9 @@ public class EpdgSelectorTest {
                         default -> queryAllTypes(hostname);
                     };
 
-            if (answer != null && answer.size() > 0) {
+            if (answer != null && !answer.isEmpty()) {
                 new Handler(Looper.getMainLooper())
-                        .post(
-                                () -> {
-                                    executor.execute(() -> callback.onAnswer(answer, 0));
-                                });
+                        .post(() -> executor.execute(() -> callback.onAnswer(answer, 0)));
             }
             // If no answers, do nothing. sendDnsProbeWithTimeout will time out and throw UHE.
             return null;
@@ -1283,7 +1211,7 @@ public class EpdgSelectorTest {
 
     @SuppressWarnings("FutureReturnValueIgnored")
     @Test
-    public void testMultipleBackToBackSetupDataCallRequest() throws Exception {
+    public void testMultipleBackToBackSetupDataCallRequest() {
         when(mfakeFeatureFlags.preventEpdgSelectionThreadsExhausted()).thenReturn(true);
         EpdgSelector epdgSelector =
                 new EpdgSelector(mMockContext, DEFAULT_SLOT_INDEX, mfakeFeatureFlags);
@@ -1298,7 +1226,7 @@ public class EpdgSelectorTest {
 
     @SuppressWarnings("FutureReturnValueIgnored")
     @Test
-    public void testBackToBackSetupDataCallRequest() throws Exception {
+    public void testBackToBackSetupDataCallRequest() {
         when(mfakeFeatureFlags.preventEpdgSelectionThreadsExhausted()).thenReturn(false);
         EpdgSelector epdgSelector =
                 new EpdgSelector(mMockContext, DEFAULT_SLOT_INDEX, mfakeFeatureFlags);
@@ -1329,8 +1257,8 @@ public class EpdgSelectorTest {
 
         sendCarrierSignalPcoValue(ApnSetting.TYPE_IMS, TEST_PCO_ID_IPV4, TEST_PCO_IPV4_DATA);
 
-        Set<InetAddress> expectedAddresses = new HashSet<>(getInetAddresses(TEST_IP_ADDRESS));
-        Set<InetAddress> actualAddresses =
+        var expectedAddresses = new HashSet<>(getInetAddresses(TEST_IPV4_ADDRESS));
+        var actualAddresses =
                 new HashSet<>(
                         getValidatedServerListWithIpPreference(
                                 EpdgSelector.PROTO_FILTER_IPV4,
@@ -1345,8 +1273,8 @@ public class EpdgSelectorTest {
 
         sendCarrierSignalPcoValue(ApnSetting.TYPE_IMS, TEST_PCO_ID_IPV6, TEST_PCO_IPV6_DATA);
 
-        Set<InetAddress> expectedAddresses = new HashSet<>(getInetAddresses(TEST_IPV6_ADDRESS));
-        Set<InetAddress> actualAddresses =
+        var expectedAddresses = new HashSet<>(getInetAddresses(TEST_IPV6_ADDRESS));
+        var actualAddresses =
                 new HashSet<>(
                         getValidatedServerListWithIpPreference(
                                 EpdgSelector.PROTO_FILTER_IPV6,
@@ -1362,9 +1290,9 @@ public class EpdgSelectorTest {
         sendCarrierSignalPcoValue(ApnSetting.TYPE_IMS, TEST_PCO_ID_IPV6, TEST_PCO_IPV6_DATA);
         sendCarrierSignalPcoValue(ApnSetting.TYPE_IMS, TEST_PCO_ID_IPV4, TEST_PCO_IPV4_DATA);
 
-        Set<InetAddress> expectedAddresses =
-                new HashSet<>(getInetAddresses(TEST_IP_ADDRESS, TEST_IPV6_ADDRESS));
-        Set<InetAddress> actualAddresses =
+        var expectedAddresses =
+                new HashSet<>(getInetAddresses(TEST_IPV4_ADDRESS, TEST_IPV6_ADDRESS));
+        var actualAddresses =
                 new HashSet<>(getValidatedServerListWithDefaultParams(/* isEmergency= */ false));
         assertEquals(expectedAddresses, actualAddresses);
     }
@@ -1416,5 +1344,52 @@ public class EpdgSelectorTest {
                         /* isEmergency= */ false);
         assertEquals(0, actualIpv4Addresses.size());
         assertEquals(0, actualIpv6Addresses.size());
+    }
+
+    @Test
+    public void testGetValidatedServerList_ignoreIpv6UniqueLocalAddress() throws Exception {
+        String uniqueLocalAddress = "fdd3:ebb6:b1bd:da46:8900:b105:515c:fe62";
+
+        applyTestAddressToNetwork(
+                List.of(
+                        new LinkAddress(InetAddress.getByName(TEST_LOCAL_IPV4_ADDRESS), 24),
+                        new LinkAddress(InetAddress.getByName(uniqueLocalAddress), 64)));
+        applyTestAddressToNetworkForFamily(EpdgSelector.PROTO_FILTER_IPV4);
+        when(DnsResolver.getInstance()).thenReturn(mMockDnsResolver);
+
+        String fqdnIpv6 = "epdg.epc.mnc120.mcc300.pub.3gppnetwork.org";
+        String fqdnIpv4 = "epdg.epc.mnc120.mcc311.pub.3gppnetwork.org";
+
+        mFakeDns.setAnswer(fqdnIpv6, new String[] {TEST_IPV6_ADDRESS}, TYPE_AAAA);
+        mFakeDns.setAnswer(fqdnIpv4, new String[] {TEST_IPV4_ADDRESS}, TYPE_A);
+
+        List<InetAddress> expectedAddresses = getInetAddresses(TEST_IPV4_ADDRESS);
+        List<InetAddress> actualAddresses =
+                getValidatedServerListWithIpPreference(
+                        EpdgSelector.PROTO_FILTER_IPV4V6,
+                        EpdgSelector.SYSTEM_PREFERRED,
+                        /* isEmergency= */ false);
+
+        assertEquals(expectedAddresses, actualAddresses);
+    }
+
+    private void applyTestAddressToNetwork(Collection<LinkAddress> addresses) {
+        mTestLinkProperties.setLinkAddresses(addresses);
+    }
+
+    private void applyTestAddressToNetworkForFamily(int filter) throws Exception {
+        List<LinkAddress> addresses = new ArrayList<>();
+
+        if (filter == EpdgSelector.PROTO_FILTER_IPV4
+                || filter == EpdgSelector.PROTO_FILTER_IPV4V6) {
+            addresses.add(new LinkAddress(InetAddress.getByName(TEST_LOCAL_IPV4_ADDRESS), 24));
+        }
+
+        if (filter == EpdgSelector.PROTO_FILTER_IPV6
+                || filter == EpdgSelector.PROTO_FILTER_IPV4V6) {
+            addresses.add(new LinkAddress(InetAddress.getByName(TEST_LOCAL_IPV6_ADDRESS), 64));
+        }
+
+        mTestLinkProperties.setLinkAddresses(addresses);
     }
 }
